Got the first couple sections in  basically

--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Tea Cozy</title>
 </head>
 <body>
+
+    <header>
+            <img src="images/img-tea-cozy-logo.png" alt="company logo">
+            <ul>
+                <li><a href=".mission">Mission</a></li>
+                <li><a href=".month">Featured Tea</a></li>
+                <li><a href=".locations">Locations</a></li>
+              </ul> 
+    </header>
+    <main>
+        <article class="mission">
+            <div class="mission-text">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+
+            </div>
+
+        </article>
+        <article class="month">
+            <div class="minititle">
+                <h2>Tea of the Month</h2>
+                <h4>What's Steeping a The Tea Cozy?</h4>
+            </div>
+        </article>
+        <article class="locations">
+
+        </article>
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
