--- a/index.html
+++ b/index.html
@@ -10,31 +10,54 @@
 
     <header>
             <img src="images/img-tea-cozy-logo.png" alt="company logo">
-            <ul>
+            <nav>
                 <li><a href=".mission">Mission</a></li>
                 <li><a href=".month">Featured Tea</a></li>
                 <li><a href=".locations">Locations</a></li>
-              </ul> 
+            </nav> 
     </header>
     <main>
-        <article class="mission">
+        <section class="mission">
             <div class="mission-text">
                 <h2>Our Mission</h2>
                 <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
 
             </div>
 
-        </article>
-        <article class="month">
-            <div class="minititle">
+        </section>
+    </main>
+    <article>
+        <section class="month">
                 <h2>Tea of the Month</h2>
                 <h4>What's Steeping a The Tea Cozy?</h4>
+        </section>
+        <section class="container">
+            <div class="picdiv">
+                <img src="./Images/img-berryblitz.jpg" alt="Berry Blitz Tea">
+                <h4>Fall Berry Blitz</h4>
             </div>
-        </article>
-        <article class="locations">
+            <div class="picdiv">
+                <img src="./Images/img-spiced-rum.jpg" alt="Spiced Rum Tea crates">
+                <h4>Spiced Rum Tea</h4>
+            </div>
+            <div class="picdiv">
+                <img src="./Images/img-donut.jpg" alt="A donut">
+                <h4>Seasonal Donuts</h4>
+            </div>
+            <div class="picdiv">
+                <img src="./Images/img-myrtle-ave.jpg" alt="Cup of tea">
+                <h4>Myrtle Ave Tea</h4>
+            </div>
+            <div class="picdiv">
+                <img src="./Images/img-bedford-bizarre.jpg" alt="Cup of tea">
+                <h4>Bedford Bizarre Tea</h4>
+            </div>
 
-        </article>
-    </main>
+        </section>
+        <section class="locations">
+
+        </section>
+    </article>
 
     <footer>
 
