--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-            <img src="images/img-tea-cozy-logo.png" alt="company logo">
+            <img src="./images/img-tea-cozy-logo.png" alt="company logo">
             <nav>
                 <li><a href=".mission">Mission</a></li>
                 <li><a href=".month">Featured Tea</a></li>
